--- a/springbootrestdemo/Dockerfile
+++ b/springbootrestdemo/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8-jdk-alpine
-COPY target/springbootdemo-0.0.1-SNAPSHOT.jar docker-restapi.jar
+COPY springbootdemo-0.0.1-SNAPSHOT.jar docker-restapi.jar
 ENTRYPOINT ["java","-jar","/docker-restapi.jar"]
